# iot-monitoring-service

./: .gitignore  CMakeLists.txt  README.md  iot_tlv.lua
src/client/: client.c  main.c
src/common/: protocol.c  protocol.h
src/server/: main.c  server.c  server.h
